src/objects/Routing_Configuration__c.object
<CustomObject>
    <description>Object to store routing configuration records for system auto routing cases to queues</description>
    <fields>
        <fullName>CurrentQueue__c</fullName>
        <description>Describes the current value of the queue, so that the system can pick the correct queue for routing</description>
        <label>Current Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <description>To allow routing engine to look at same field on Case and route it to appropriate restricted/non-restricted Queues</description>
        <label>Onshore Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Routing__c</fullName>
        <label>Priority Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>Profile Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Used to capture queue name case will be routed to</description>
        <label>Queue Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <label>Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <description>Used to route to more urgent queues.  Example:  Platinum Providers have their cases routed to special queues.  Platinum Providers will have a code which is populated on the case at case creation.</description>
        <label>Service Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <globalPicklist>Subtype</globalPicklist>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic1__c</fullName>
        <globalPicklist>Topic</globalPicklist>
        <label>Topic</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <label>UHG Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Routing Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Group_ID__c</columns>
        <columns>IsActive__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Status__c</columns>
        <columns>ServiceLevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Records_all_fields</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>ProfileName__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Status__c</columns>
        <columns>Priority_Routing__c</columns>
        <columns>IsActive__c</columns>
        <columns>RoleName__c</columns>
        <columns>CurrentQueue__c</columns>
        <columns>ServiceLevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records (all fields)</label>
    </listViews>
    <listViews>
        <fullName>Bob</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Group_ID__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Priority_Routing__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Bob</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Records</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Status__c</columns>
        <columns>ProfileName__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority_Routing__c</columns>
        <columns>CurrentQueue__c</columns>
        <columns>SortOrder__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Records</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Routing Configuration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ECM_CaseOwnerandCurrentQueueVR</fullName>
        <active>true</active>
        <description>Ensures that whenever the Current Queue is populated Profile Name AND/OR Role Name are blank. (And vice versa - whenever Profile Name AND/OR Role Name are populated, Current queue should be blank)</description>
        <errorConditionFormula>NOT( ISBLANK(CurrentQueue__c) )  &amp;&amp; ( NOT( ISBLANK(ProfileName__c) ) || NOT( ISBLANK(RoleName__c) ))</errorConditionFormula>
        <errorMessage>When creating Queue to Queue routing the Profile Name and Role Name must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_PriorityRoutingAndCurrentQueueVR</fullName>
        <active>true</active>
        <description>Ensures that whenever the Current Queue is populated Priority Routing Checkbox is blank. And vice versa - whenever the Priority Routing checkbox is checked the Current Queue needs to be blank</description>
        <errorConditionFormula>NOT(ISBLANK(CurrentQueue__c)) &amp;&amp; 
( (ISPICKVAL(Priority_Routing__c , &quot;No&quot;)) || 
  (ISBLANK(TEXT(Priority_Routing__c))) )</errorConditionFormula>
        <errorMessage>When creating Queue to Queue routing the Priority Routing field must be Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_TopicAndCurrentQueueVR</fullName>
        <active>true</active>
        <description>Ensures that whenever the Current Queue is populated the &apos;Topic&apos; field is blank. And vice versa - Ensures that whenever the Topic is populated the Current Queue field is blank</description>
        <errorConditionFormula>NOT( ISBLANK(CurrentQueue__c) ) &amp;&amp;  NOT(ISBLANK( TEXT(Topic1__c )))</errorConditionFormula>
        <errorMessage>When creating Queue to Queue routing Topic must be blank.</errorMessage>
    </validationRules>
</CustomObject>